--- a/docs/slides/deck/99-qa.md
+++ b/docs/slides/deck/99-qa.md
@@ -2,10 +2,11 @@
 
 <br/>
 
+GitHub:
 <center>
-<img src="/resources/qr.png" height="150" width="150" />
+<img src="/resources/qr.png" height="200" width="200" />
 </center>
 
 <br/>
 
-All the examples are available on Compiler Explorer: https://jll63.github.io/yomm2/ce/slides.html<br/>(redirection)
+examples are on Compiler Explorer: https://jll63.github.io/yomm2/ce/slides.html<br/>(redirects to volatile godbolt.org short URL)<br/>
